# nfflu-results-collector

./: README.md  config-template.json  meta.yaml  pyproject.toml
nfflu_results_collector/: __init__.py  __main__.py  auto.py  collector.py  config.py  nextclade.py  tools.py  utils_bak.py
nfflu_results_collector/config/: defaults.json
