[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nfflu-results-collector"
version = "0.1.1"
authors = [
    {name = "John Palmer", email = "john.palmer@bccdc.ca"},
]
description = "A Python package for collecting and summarizing relevant results from nf-flu analysis runs."
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/BCCDC-PHL/nfflu-results-collector"

[project.scripts]
nfflu-results-collector = "nfflu_results_collector.__main__:main"

[tool.setuptools]
packages = ["nfflu_results_collector"]
zip-safe = false
include-package-data = true
